--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>My First Webpage</title>
 </head>
 <body>
-    <h1>Suh World?</h1>
+    <!--Simple question-->
+    <h1><Strong>Suh</Strong> World?</h1>
+    <!-- shortcut = ctrl + / -->
+    <p2><strong>Lorem ipsum dolor sit amet,</strong> consectetur adipisicing elit. Harum ducimus, quibusdam incidunt aliquam laboriosam saepe sapiente amet nesciunt illum nisi tenetur accusantium debitis, alias deserunt maiores aspernatur sed iste recusandae.</p2>
 </body>
 </html>
