--- a/index.html
+++ b/index.html
@@ -10,5 +10,27 @@
     <h1><Strong>Suh</Strong> World?</h1>
     <!-- shortcut = ctrl + / -->
     <p2><strong>Lorem ipsum dolor sit amet,</strong> consectetur adipisicing elit. Harum ducimus, quibusdam incidunt aliquam laboriosam saepe sapiente amet nesciunt illum nisi tenetur accusantium debitis, alias deserunt maiores aspernatur sed iste recusandae.</p2>
+    <ul>
+        <li>Zas</li>
+        <li>Ritos</li>
+        <li>Soosh</li>
+    </ul>
+    <ol>
+        <li>Get some Z's</li>
+        <li>Grub some mangoes</li>
+    </ol>
+    <ul>
+        <li>Indo</li>
+        <li>Straya</li>
+        <li>Oahu</li>
+        <li>Chopes</li>
+    </ul>
+    <ol>
+        <li>THUG1</li>
+        <li>THUG2</li>
+        <li>GTA</li>
+        <li>NARC</li>
+        <li>SSX</li>
+    </ol>
 </body>
 </html>
